completed playerWon and playwerDraw methods

--- a/index.html
+++ b/index.html
@@ -17,24 +17,14 @@
     <div class="container">
         <h1 id="heading">Play</h1>
         <div id="menu">
-            <h2>Seleziona la griglia con cui giocare</h2>
+            <!--<h2>Seleziona la griglia con cui giocare</h2>-->
             <div class="options">
                 <div class="custom-select" style="width:200px;">
-                    <label for="height">Height:</label>
-                    <select id = "height">
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                    </select>
-                </div>
-                <div class="custom-select" style="width:200px;">
-                    <label for="width">Width:</label>
-                    <select id = "width">
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
+                    <label for="size">Choose a grid:</label>
+                    <select id = "size">
+                        <option value="3">3x3</option>
+                        <option value="5">5x5</option>
+                        <option value="7">7x7</option>
                     </select>
                 </div>
             </div>
