edited and removed dropdown menu

--- a/index.html
+++ b/index.html
@@ -19,18 +19,16 @@
         <h1 id="heading">Play</h1>
         <div id="menu">
             <!--<h2>Seleziona la griglia con cui giocare</h2>-->
-            <div class="options">
+            <div>
                 <div class="custom-select" style="width:200px;">
                     <label for="size">Choose a grid:</label>
-                    <select id = "size">
-                        <option value="3">3x3</option>
-                        <option value="5">5x5</option>
-                        <option value="7">7x7</option>
-                    </select>
+                    <div class="options" id="three">3 X 3</div>
+                    <div class="options" id="five">5 X 5</div>
+                    <div class="options" id="seven">7 X 7</div>
                 </div>
             </div>
         </div>
-        <button id="restart">Restart</button>
+        <!--<button id="restart">Restart</button>-->
         <div id="board">
         </div>
         
